--- a/style.css
+++ b/style.css
@@ -9,8 +9,9 @@ body {
   padding: 0;
 }
 
-body {
+main {
   background: #666666;
+  padding: 64px 0 58px;
 }
 
 header {
@@ -65,14 +66,9 @@ strong {
 .card {
   padding: 24px;
   border-bottom: 8px solid #999999;
-  margin-bottom: 56px;
+  background: #fff;
 }
 
 .intro-chunk {
   margin: 0 24px;
-}
-
-.card {
-  background: #fff;
-  margin-top: 72px;
 }
