style: update to match design

--- a/style.css
+++ b/style.css
@@ -4,9 +4,70 @@
 }
 
 html,
-body {
+body,
+#root {
   margin: 0;
   padding: 0;
+  height: 100%;
 }
 
-/* Add styles here! */
+/* Typography */
+
+h1 {
+  font-size: 2rem;
+  line-height: 1.2; /* 120% */
+  margin: 0;
+  margin-bottom: 3rem;
+}
+
+p {
+  font-size: 1.25rem;
+  line-height: 1.5; /* 150% */
+  margin: 0;
+  margin-bottom: 1rem;
+}
+
+p:last-child {
+  margin-bottom: 0;
+}
+
+strong {
+  color: hsl(160deg, 100%, 30%);
+}
+
+.max-width-wrapper {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 0px 24px;
+}
+
+.intro-chunk {
+  max-width: 415px;
+  padding-top: 96px;
+  padding-bottom: 64px;
+}
+
+main {
+  border-top: 8px solid hsl(0deg, 0%, 60%);
+  background-color:  hsl(0deg, 0%, 40%);
+  padding: 64px 0;
+}
+
+.card {
+  background-color: hsl(0deg, 0%, 100%);
+  border-bottom: 8px solid hsl(0deg, 0%, 60%);
+  padding: 24px;
+  margin: 0 -24px;
+}
+
+.indented-heading {
+  width: fit-content;
+  margin: 0;
+  margin-top: -16px;
+  margin-left: -32px;
+  margin-bottom: 1rem; /* use rem for readability / Ask: should this value expand with the user's font size? Yes -> rem | No -> px */
+  padding: 16px 32px;
+  font-size: 1.5rem;
+  background-color: hsl(45deg, 100%, 50%);
+  border-bottom: 8px solid hsl(45deg, 100%, 40%);
+}
