--- a/style.css
+++ b/style.css
@@ -21,4 +21,9 @@ body {
   --gray-medium: hsl(0deg, 0%, 40%); /*medium) */
   --gray-light: hsl(0deg, 0%, 60%); /*light) */
   --white: hsl(0deg, 0%, 100%); /*white) */
+
+  --text-normal: 1rem;
+  --text-large: 1.25rem;
+  --text-larger: 1.5rem;
+  --text-largest: 2rem;
 }
