apply max width to wrapper instead of header and main

--- a/style.css
+++ b/style.css
@@ -37,8 +37,7 @@ body {
   --gap-16: 128px;
 }
 
-header,
-main {
+.max-width-wrapper {
   padding-inline: var(--gap-3);
   max-width: calc(var(--gap-1) * 100);
 }
