--- a/style.css
+++ b/style.css
@@ -46,13 +46,13 @@ header {
   padding-block-end: calc(var(--gap-1) * 6);
 }
 
-header .intro-chunk {
-  max-width: calc(var(--gap-1) * 56);
-}
-
 header h1 {
   font-size: var(--text-largest);
   margin-bottom: var(--gap-6);
+}
+
+header .intro-chunk {
+  max-width: calc(var(--gap-1) * 56);
 }
 
 p {
@@ -69,6 +69,10 @@ main {
   padding-block: var(--gap-8);
 }
 
+h2 {
+  margin: 0;
+}
+
 .intro-chunk,
 .card {
   padding-inline: var(--gap-3);
@@ -77,6 +81,7 @@ main {
 .card {
   background-color: var(--white);
   border-bottom: solid var(--gap-1) var(--gray-light);
+  padding-top: var(--gap-1);
 }
 
 .card .indented-heading {
