--- a/style.css
+++ b/style.css
@@ -7,10 +7,47 @@ html,
 body {
   margin: 0;
   padding: 0;
+  font-size: 1.25rem;
+  line-height: 150%;
+}
+
+strong {
+  color:hsl(160deg, 100%, 30%);
+}
+
+header {
+  padding-block-start: 2rem;
+  padding-block-end: 2rem;
+  border-bottom: 8px solid hsl(0deg, 0%, 60%);
+}
+
+main {
+  background: hsl(0deg, 0%, 40%);
+  padding-block-start: 2rem;
+  padding-block-end: 2rem;
+
 }
 
 .max-width-wrapper {
-  width: 752px;
+  max-width: 800px;
+  margin: auto;
 }
 
-/* Add styles here! */
+.intro-chunk {
+  max-width: 415px;
+  padding: 1rem;
+}
+
+.indented-heading {
+  display: inline-block;
+  background: hsl(45deg, 100%, 50%);
+  border-bottom: hsl(45deg, 100%, 40%);
+  padding: 1rem 1rem 1rem 2rem;
+  margin: 0px 0px 0px -2rem;
+}
+
+.card {
+  background: #FFFFFF;
+  border-bottom: 8px solid hsl(0deg, 0%, 60%);
+  padding: 1rem;
+}
