--- a/style.css
+++ b/style.css
@@ -1,12 +1,69 @@
 * {
   box-sizing: border-box;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
 html,
 body {
   margin: 0;
   padding: 0;
+
+  --color-green: hsl(160deg, 100%, 30%);
+  --color-gold-light: hsl(45deg, 100%, 50%);
+  --color-gold-dark: hsl(45deg, 100%, 40%);
+  --color-very-dark: hsl(0deg, 0%, 10%);
+  --color-dark: hsl(0deg, 0%, 30%);
+  --color-medium: hsl(0deg, 0%, 40%);
+  --color-light: hsl(0deg, 0%, 60%);
 }
 
 /* Add styles here! */
+.max-width-wrapper {
+  max-width: 1280px;
+  margin: 0 auto;
+}
+
+header .max-width-wrapper {
+  border-bottom: 8px solid var(--color-light);
+}
+
+.intro-chunk {
+  max-width: 800px;
+  padding: 96px 24px 64px;
+  margin: 0 auto;
+}
+
+.title {
+  margin: 0 0 48px 0;
+}
+
+.intro-chunk p strong {
+  color: var(--color-green);
+}
+
+main .max-width-wrapper {
+  padding-block: 72px;
+  background-color: var(--color-medium);
+}
+
+.card {
+  background-color: white;
+  padding: 8px 24px 8px 0;
+  border-bottom: 8px solid var(--color-light);
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.indented-heading {
+  margin: 0;
+  margin-left: -8px;
+  width: fit-content;
+  padding: 12px 24px;
+  background-color: var(--color-gold-light);
+  border-bottom: solid 8px var(--color-gold-dark);
+}
+
+.card p {
+  padding-left: 24px;
+  font-weight: 500;
+}
